--- a/Cardna-iOS/Cardna-iOS/Source/Scene/AddCard/AddCardYouCompleted.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/AddCard/AddCardYouCompleted.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ryy-DM-KzG">
-                                <rect key="frame" x="186" y="378" width="42" height="30"/>
+                                <rect key="frame" x="186" y="438" width="42" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="zzY-is-wNB"/>
                                 </constraints>
@@ -29,7 +29,7 @@
                         <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="ryy-DM-KzG" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="iJJ-i8-FTp"/>
-                            <constraint firstItem="ryy-DM-KzG" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="334" id="j3l-1j-jxh"/>
+                            <constraint firstItem="ryy-DM-KzG" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" constant="5" id="z8U-vK-Rwm"/>
                         </constraints>
                     </view>
                     <connections>
